# esp32_test

./: .gitmodules
test_example/hello_world/main/: CMakeLists.txt  hello_world_main.c
test_example/import_lib/: sdkconfig
test_example/import_lib/main/: CMakeLists.txt
test_example/import_lib/main/lib/: 001.patch
test_example/test02_sta/: CMakeLists.txt
test_example/test02_sta/main/: CMakeLists.txt  sta_main.c
test_example/test03_posix/: CMakeLists.txt
test_example/test03_posix/main/: CMakeLists.txt  usrapp_main.c
test_example/test04_usbip/: CMakeLists.txt
test_example/test04_usbip/main/: Kconfig.projbuild  usrapp_main.c
test_example/use_vsf_component_in_esp_idf/main/: hello_world_main.c  vsf_usr_cfg.h
test_example/use_vsf_component_in_sub_floder/: sdkconfig
